@@ -1,5 +1,9 @@
 
-2007-06-02  Benno Schulenberg  <benno@vertaalt.nl>
+2007-06-04  Benno Schulenberg  <benno@vertaalt.nl>
+
+	* bin/tp-robot, lib/run.py: Simplify some of the robot's messages.
+
+2007-06-03  Benno Schulenberg  <benno@vertaalt.nl>
 
 	* web/layout.html: Temporarily tell search engines to stay away.
 
